--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^7",
-    "express": "^4",
     "@sap/cds-hana": "^2",
-    "@sap/xssec": "^3"
+    "@sap/xssec": "^3",
+    "express": "^4"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "^8.0.3",
     "@sap/eslint-plugin-cds": "^3",
     "@sap/ux-specification": "^1.120.14",
     "axios": "^1.7.2",
@@ -25,7 +26,8 @@
   "scripts": {
     "test": "jest tests/test.js",
     "start": "cds-serve",
-    "watch-incidents": "cds watch --open incidents/webapp/index.html?sap-ui-xx-viewCache=false"
+    "watch-incidents": "cds watch --open incidents/webapp/index.html?sap-ui-xx-viewCache=false",
+    "cds-build": "npm install --include=dev && cds build --production"
   },
   "cds": {
     "requires": {
